--- a/Configs/.config/waybar/Styles/[TOP] Simple-Cornered.css
+++ b/Configs/.config/waybar/Styles/[TOP] Simple-Cornered.css
@@ -60,7 +60,7 @@ tooltip {
     padding-left: 4px;
     padding-right: 4px;
     animation: gradient_f 20s ease-in infinite;
-    transition: all 0.5s cubic-bezier(.55,-0.68,.48,1.682);
+		transition: all 0.3s ease-in-out;
 }
 
 #taskbar button.active,
@@ -70,7 +70,7 @@ tooltip {
     padding-left: 8px;
     padding-right: 8px;
     animation: gradient_f 20s ease-in infinite;
-    transition: all 0.3s cubic-bezier(.55,-0.68,.48,1.682);
+		transition: all 0.3s ease-in-out;
 }
 
 #workspaces button.focused {
@@ -88,7 +88,7 @@ tooltip {
     padding-left: 2px;
     padding-right: 2px;
     animation: gradient_f 20s ease-in infinite;
-    transition: all 0.3s cubic-bezier(.55,-0.68,.48,1.682);
+		transition: all 0.3s ease-in-out;
 }
 
 #backlight,
