Add power-profiles-daemon to styles

--- a/Configs/.config/waybar/Styles/[BOT] HyDE.css
+++ b/Configs/.config/waybar/Styles/[BOT] HyDE.css
@@ -115,6 +115,7 @@ tooltip {
 #custom-notifications,
 #custom-power,
 #pulseaudio,
+#power-profiles-daemon,
 #custom-spotify,
 #taskbar,
 #custom-theme,
